--- a/templates/post.html
+++ b/templates/post.html
@@ -2,6 +2,11 @@
 
 {% block content %}
     <h2>{% block title %} {{ post['title'] }} {% endblock %}</h2>
+    {% if post["store"] == "steam" %}
+    <a href="{{store_url}}"><img class="store_img" src="/static/images/steam_logo.svg" alt="Steam Store Link"></a>
+    {% else %}
+    <img class="store_img" src="/static/images/store.svg" alt="Store Link">
+    {% endif %}
     <span class="badge badge-primary">{{ post['created'] }}</span>
     <p>{{ post['content'] }}</p>
 {% endblock %}
