--- a/templates/edit.html
+++ b/templates/edit.html
@@ -21,7 +21,7 @@
     </div>
 </form>
 
-<form action="{{ url_for('delete', id=post['id']) }}" method="POST">
+<form action="{{ url_for('delete', id=post['id'], store=post['store']) }}" method="POST">
     <input type="submit" value="Delete Post" class="btn btn-danger btn-sm"
         onclick="return confirm('Are you sure you want to delete this post?')">
 </form>
