--- a/templates/steam_post.html
+++ b/templates/steam_post.html
@@ -1,25 +1,34 @@
 {% extends 'base.html' %}
 
 {% block left_panel %}
-<img src="{{bg_img}}" class="left_panel">
+<div class="left_panel" style="background-image: url('{{bg_img}}')">
+</div>
 {% endblock %}
 
 {% block content %}
-<div class="container">
-    <h2 data-bs-theme="dark">{% block title %} {{ post['title'] }} {% endblock %}</h2>
-    {% if post["store"] == "steam" %}
-    <a href="{{store_url}}"><img class="store_image" src="/static/images/steam_logo.svg" alt="Steam Store Link"></a>
-    {% else %}
-    <img class="store_image" src="/static/images/store.svg" alt="Store Link">
-    {% endif %}
-    <span class="badge badge-primary">{{ post['created'] }}</span>
+<div class="container p-3">
     <div>
-        <p style="display: inline-block;">{{ post['content'] }}</p>
-        <a href="{{store_url}}"><img class="capsule_image" src="{{image}}" alt="Game Image"></a>
+        <a href="{{store_url}}"><img class="store_image float-end" src="/static/images/steam_logo.svg"
+                alt="Steam Store Link"></a>
+        <h2 class="text-white">{% block title %} {{ post['title'] }} {% endblock %}</h2>
     </div>
+    <span class="badge badge-primary">{{ post['created'] }}</span>
+    <div class="row">
+        <div class="col">
+            <h3>My Review</h3>
+            <p>{{ post['content'] }}</p>
+        </div>
+        <div class="col d-flex flex-wrap align-items-center">
+            <a href="{{store_url}}"><img class="capsule_image border border-primary" src="{{image}}"
+                    alt="Game Image"></a>
+        </div>
+    </div>
+    <hr class="p-3">
+    <div class="p-4 steam_description">{{desc|safe}}</div>
 </div>
 {% endblock %}
 
 {% block right_panel %}
-<img src="{{bg_img}}" class="right_panel">
+<div class="right_panel" style="background-image: url('{{bg_img}}')">
+</div>
 {% endblock %}
