--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="/static/css/style.css">
+  <link rel="stylesheet" href="/game-reviews/static/css/style.css">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -23,11 +23,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="about">About</a>
+            <a class="nav-link" href="{{url_for('about_page')}}">About</a>
           </li>
+	  {% if config['ENV'] != 'production' %}
           <li class="nav-item">
             <a class="nav-link" href="{{url_for('create')}}">New Post</a>
           </li>
+	  {% endif %}
         </ul>
       </div>
     </nav>
