--- a/templates/index.html
+++ b/templates/index.html
@@ -29,9 +29,13 @@
 {% endif %}
 <span class="edit badge badge-primary float-end">{{ post['created'] }}</span>
 <span></span>
+
+{% if config['ENV'] != 'production' %}
 <a href="{{ url_for('edit', id=id, store=post['store']) }}">
     <span class="badge badge-warning float-end">Edit</span>
 </a>
+{% endif %}
+
 <hr>
 {% endfor %}
 {% endblock %}
