Changed Jinja templates to extend base.js

--- a/templates/steam_post.j2
+++ b/templates/steam_post.j2
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base.js' %}
 
 {% block left_panel %}
 <div class="left_panel" style="background-image: url('{{bg_img}}')">
