--- a/templates/create.j2
+++ b/templates/create.j2
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base.js' %}
 
 {% block content %}
 <h1>{% block title %} Create a New Post {% endblock %}</h1>
